// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeersCard: index mapStateToProps 1`] = `
Object {
  "node": Object {
    "coinbase": Object {
      "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
    },
    "name": "LOCALHOST",
    "peers": Object {
      "192.168.10.33": Object {
        "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
        "tcp_port": "30303",
      },
      "192.168.10.36": Object {
        "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
        "tcp_port": "30303",
      },
    },
  },
  "peerIds": undefined,
}
`;

exports[`PeersCard: index render component with values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PeersCard
    node={
      Object {
        "coinbase": Object {
          "coinbase": "82069cc441c42b2706fa5d3129deeb677812e5a5",
        },
        "name": "LOCALHOST",
        "peers": Object {
          "192.168.10.33": Object {
            "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
            "tcp_port": "30303",
          },
          "192.168.10.36": Object {
            "pubkey": "687294782948972018571047ra9asd8f97381asdfasd",
            "tcp_port": "30303",
          },
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row node-peers"
        >
          <div
            className="col-xs-3"
          >
            <small>
              Public Key:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <small>
              <HexText
                value="687294782948972018571047ra9asd8f97381asdfasd"
              />
            </small>
          </div>
          <div
            className="col-xs-3"
          >
            <small>
              IP:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <Text
              ellipsize={true}
            >
              <small>
                192.168.10.36
              </small>
            </Text>
          </div>
          <div
            className="col-xs-3"
          >
            <small>
              Port:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <Text
              ellipsize={true}
            >
              <small>
                30303
              </small>
            </Text>
          </div>
        </div>,
        <div
          className="row node-peers"
        >
          <div
            className="col-xs-3"
          >
            <small>
              Public Key:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <small>
              <HexText
                value="687294782948972018571047ra9asd8f97381asdfasd"
              />
            </small>
          </div>
          <div
            className="col-xs-3"
          >
            <small>
              IP:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <Text
              ellipsize={true}
            >
              <small>
                192.168.10.33
              </small>
            </Text>
          </div>
          <div
            className="col-xs-3"
          >
            <small>
              Port:
            </small>
          </div>
          <div
            className="col-xs-9"
          >
            <Text
              ellipsize={true}
            >
              <small>
                30303
              </small>
            </Text>
          </div>
        </div>,
      ],
      "className": "pt-card pt-elevation-2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-3"
            >
              <small>
                Public Key:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>
            </div>,
          ],
          "className": "row node-peers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Public Key:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Public Key:",
              },
              "ref": null,
              "rendered": "Public Key:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "value": "687294782948972018571047ra9asd8f97381asdfasd",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                IP:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "IP:",
              },
              "ref": null,
              "rendered": "IP:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  192.168.10.36
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "192.168.10.36",
                },
                "ref": null,
                "rendered": "192.168.10.36",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Port:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Port:",
              },
              "ref": null,
              "rendered": "Port:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  30303
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "30303",
                },
                "ref": null,
                "rendered": "30303",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-xs-3"
            >
              <small>
                Public Key:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>
            </div>,
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>,
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>
            </div>,
          ],
          "className": "row node-peers",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Public Key:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Public Key:",
              },
              "ref": null,
              "rendered": "Public Key:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "value": "687294782948972018571047ra9asd8f97381asdfasd",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                IP:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "IP:",
              },
              "ref": null,
              "rendered": "IP:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  192.168.10.33
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "192.168.10.33",
                },
                "ref": null,
                "rendered": "192.168.10.33",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <small>
                Port:
              </small>,
              "className": "col-xs-3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Port:",
              },
              "ref": null,
              "rendered": "Port:",
              "type": "small",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>,
              "className": "col-xs-9",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <small>
                  30303
                </small>,
                "ellipsize": true,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "30303",
                },
                "ref": null,
                "rendered": "30303",
                "type": "small",
              },
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row node-peers"
          >
            <div
              className="col-xs-3"
            >
              <small>
                Public Key:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.36
                </small>
              </Text>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>
            </div>
          </div>,
          <div
            className="row node-peers"
          >
            <div
              className="col-xs-3"
            >
              <small>
                Public Key:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <small>
                <HexText
                  value="687294782948972018571047ra9asd8f97381asdfasd"
                />
              </small>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                IP:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  192.168.10.33
                </small>
              </Text>
            </div>
            <div
              className="col-xs-3"
            >
              <small>
                Port:
              </small>
            </div>
            <div
              className="col-xs-9"
            >
              <Text
                ellipsize={true}
              >
                <small>
                  30303
                </small>
              </Text>
            </div>
          </div>,
        ],
        "className": "pt-card pt-elevation-2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-3"
              >
                <small>
                  Public Key:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <small>
                  <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />
                </small>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.36
                  </small>
                </Text>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    30303
                  </small>
                </Text>
              </div>,
            ],
            "className": "row node-peers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Public Key:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Public Key:",
                },
                "ref": null,
                "rendered": "Public Key:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />
                </small>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "value": "687294782948972018571047ra9asd8f97381asdfasd",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  IP:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "IP:",
                },
                "ref": null,
                "rendered": "IP:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.36
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    192.168.10.36
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "192.168.10.36",
                  },
                  "ref": null,
                  "rendered": "192.168.10.36",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Port:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Port:",
                },
                "ref": null,
                "rendered": "Port:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    30303
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    30303
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "30303",
                  },
                  "ref": null,
                  "rendered": "30303",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-xs-3"
              >
                <small>
                  Public Key:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <small>
                  <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />
                </small>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  IP:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.33
                  </small>
                </Text>
              </div>,
              <div
                className="col-xs-3"
              >
                <small>
                  Port:
                </small>
              </div>,
              <div
                className="col-xs-9"
              >
                <Text
                  ellipsize={true}
                >
                  <small>
                    30303
                  </small>
                </Text>
              </div>,
            ],
            "className": "row node-peers",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Public Key:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Public Key:",
                },
                "ref": null,
                "rendered": "Public Key:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />
                </small>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <HexText
                    value="687294782948972018571047ra9asd8f97381asdfasd"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "value": "687294782948972018571047ra9asd8f97381asdfasd",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  IP:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "IP:",
                },
                "ref": null,
                "rendered": "IP:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    192.168.10.33
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    192.168.10.33
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "192.168.10.33",
                  },
                  "ref": null,
                  "rendered": "192.168.10.33",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <small>
                  Port:
                </small>,
                "className": "col-xs-3",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Port:",
                },
                "ref": null,
                "rendered": "Port:",
                "type": "small",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Text
                  ellipsize={true}
                >
                  <small>
                    30303
                  </small>
                </Text>,
                "className": "col-xs-9",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <small>
                    30303
                  </small>,
                  "ellipsize": true,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "30303",
                  },
                  "ref": null,
                  "rendered": "30303",
                  "type": "small",
                },
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`PeersCard: index render component without values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PeersCard
    node={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Text
        ellipsize={true}
      >
        <small>
          No peers
        </small>
      </Text>,
      "className": "pt-card pt-elevation-2",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <small>
          No peers
        </small>,
        "ellipsize": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No peers",
        },
        "ref": null,
        "rendered": "No peers",
        "type": "small",
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Text
          ellipsize={true}
        >
          <small>
            No peers
          </small>
        </Text>,
        "className": "pt-card pt-elevation-2",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <small>
            No peers
          </small>,
          "ellipsize": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No peers",
          },
          "ref": null,
          "rendered": "No peers",
          "type": "small",
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
